# Optimation-Python-SDK

./: .env.example  LICENCE  pyproject.toml  requirements.txt
src/optimation_cli/: fastapi_template.py  flask_template.py  main.py  models.py  template_shared.py  worker_template.py
src/optimation_connectors/: __init__.py
src/optimation_connectors/elevenlab/: __init__.py  client.py  exceptions.py  tts.py
src/optimation_connectors/gemini/: __init__.py  client.py  exceptions.py  tts.py
src/optimation_connectors/openai/: __init__.py  client.py  exceptions.py  files.py  ocr.py
src/optimation_connectors/parse/: __init__.py  client.py  query.py  types.py
src/optimation_core/: __init__.py  api_client.py  config.py  exceptions.py  logging.py
