[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimation-python-sdk"
version = "0.1.1"
description = "Optimation core + connectors + CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
  "openai>=2.21.0",
  "elevenlabs==2.36.1",
  "google-genai==1.64.0",
]

[project.scripts]
optimation = "optimation_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/optimation_core", "src/optimation_connectors", "src/optimation_cli"]

[tool.ruff]
line-length = 100
